# reg_agent

./: .coveragerc  .env.sample  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: google-python-style-guide.mdc  pytest.mdc  python-logging.mdc  ruff-linting.mdc  use-uv.mdc
.devcontainer/: devcontainer.json
scripts/: example_metadata_service.py  example_ocr_service.py  example_query_metadata.py  example_run_ambiguous_query.py  example_run_query_agent.py  example_run_query_cag_pipeline.py  example_run_tool_test.py  query_metadata.py  run_query_agent.py  run_query_cag_pipeline.py  run_tool_test.py  test_duckdb_tool.py
src/reg_agent/: __init__.py  cli.py  config.py
src/reg_agent/agents/: cag_agent.py  query_agent.py
src/reg_agent/auth/: __init__.py  http_auth.py  token_manager.py
src/reg_agent/commands/: ingest_cmd.py
src/reg_agent/core/db/: __init__.py  connection.py  models.py  repositories.py  repository_abc.py  unit_of_work.py
src/reg_agent/pipelines/: query_and_cag_graph.py
src/reg_agent/pipelines/ingestion/: graph.py  loader.py  run.py
src/reg_agent/pipelines/ingestion/tasks/: __init__.py  task_1_create_records.py  task_2_ocr.py  task_3_metadata.py
src/reg_agent/schemas/: __init__.py  metadata.py
src/reg_agent/services/: metadata_service.py  ocr_service.py
src/reg_agent/tools/: __init__.py  duckdb_tool.py
src/reg_agent/utils/: downloader.py  timing.py
tests/: conftest.py  test_config.py  test_reg_agent.py
tests/agents/: test_query_agent.py  test_query_agent_runtime.py
tests/auth/: test_http_auth.py  test_token_manager.py
tests/commands/: test_ingest_cmd.py
tests/core/db/: __init__.py  test_connection.py  test_models.py  test_repositories.py  test_unit_of_work.py
tests/integration/: test_db_integration.py
tests/pipelines/: __init__.py  test_query_cag_graph.py
tests/pipelines/ingestion/: __init__.py  test_loader.py  test_run.py
tests/pipelines/ingestion/tasks/: __init__.py  test_task_1_create_records.py  test_task_2_ocr.py  test_task_3_metadata.py
tests/services/: test_metadata_service.py  test_ocr_service.py
tests/tools/: test_duckdb_tool.py
tests/utils/: test_downloader.py
