[project]
name = "reg-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alberto-Codes", email = "94092485+Alberto-Codes@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.2.2",
    "feedparser>=6.0.11",
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "structlog>=25.3.0",
    "tqdm>=4.67.1",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-lxml>=2025.3.30",
    "types-requests>=2.32.0.20250328",
]

[project.scripts]
reg-agent = "reg_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.7",
]
