[project]
name = "reg-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alberto-Codes", email = "94092485+Alberto-Codes@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "docling>=2.31.0",
    "duckdb>=1.2.2",
    "duckdb-engine>=0.17.0",
    "feedparser>=6.0.11",
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "structlog>=25.3.0",
    "tqdm>=4.67.1",
    "typer[all]>=0.15.2",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-lxml>=2025.3.30",
    "types-requests>=2.32.0.20250328",
    "torch>=2.0.0",
    "pydantic-ai>=0.1.6",
    "google-auth>=2.0.0",
    "httpx>=0.27.0",
    "pydantic-graph>=0.1.6",
]

# Remove the [project.scripts] section entirely if no other scripts exist,
# or just the reg-agent line if others remain.
[project.scripts]
reg-agent = "reg_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.7",
    "mypy>=1.0.0",
    "python-dotenv>=1.1.0",
    "pytest-asyncio>=0.26.0",
    "logfire>=3.14.1",
    "pydantic-ai[logfire]>=0.1.6",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/reg_agent"]
omit = [
    "src/reg_agent/__main__.py", # Example: if you have a main entry point file
]

[tool.coverage.report]
# Fail if coverage drops below 80% (adjust as needed)
# fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",  # Standard pragma
    "def __repr__",      # Don't require tests for simple reprs
    "if self.debug:",  # Debugging blocks
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == '__main__':" # Also exclude dunder main specifically
]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
#    "-ra", # Display summary info for (s)skipped, (X)xfailed, (f)failed, (E)error
    "-q", # Quieter output
]
# testpaths allows specifying directories for tests
testpaths = [
    "tests",
]
# python_files specifies the naming convention for test files
python_files = "test_*.py"
# python_classes specifies the naming convention for test classes
python_classes = "Test*"
# python_functions specifies the naming convention for test functions
python_functions = "test_*"
# log_cli enables live logging output during test runs
log_cli = true
log_cli_level = "INFO" # Set the default log level for CLI output
log_cli_format = "%(levelname)-8s %(name)s:%(lineno)d %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\")",
]

# Example filterwarnings:
# filterwarnings = [
#     "ignore::DeprecationWarning",
# ]

# miscellaneous

[tool.mypy]
# Global options
python_version = "3.12"
namespace_packages = false
mypy_path = "src"
# packages = ["reg_agent"] # Removed - specify targets on command line
# files = ["tests"] # Removed - specify targets on command line
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Ignore missing imports for libraries that don't have stubs

[[tool.mypy.overrides]]
# Ignore errors from tests trying to import the main package
module = "tests.*"
ignore_errors = false # Check tests, but...
# ignore_missing_imports = true # ...allow them to import reg_agent (didn't work)
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
# Ignore errors from relative imports within the main package when run this way
module = "reg_agent.*"
ignore_errors = false # Check the package, but...
# ignore_missing_imports = true # Allow relative imports like .token_manager (Might hide actual errors)
# Let's be more specific and ignore the specific error code for relative imports if possible
# If `ignore_missing_imports = true` above works, use that. Otherwise, investigate specific error codes.
# For now, let's assume the tests.* override might be enough, or that adding __init__.py fixed some.
# Re-run first to see which import errors remain within reg_agent.
